DREM-894 [不具合修正] リモコンUI表示範囲外をタップでリモコンUIが閉じない件の修正
範囲外タップ時にリモコン画面を閉じる（下に戻す）
・コンテンツ詳細画面のみ未実装
・各リスナーの修正未実施

Change-Id: Id1496b9a9267e51518ab6de7424e01646c7cd05f

--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_base.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_base.xml
@@ -15,6 +15,10 @@
     </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/base_motion_detection_rl"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+    <RelativeLayout
         android:id="@+id/remote_controller_rl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
