--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/home_main_layout.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#222222"
-    android:orientation="vertical">
+    android:background="#222222">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -56,4 +55,9 @@
         </LinearLayout>
 
     </ScrollView>
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/home_base_ll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+</RelativeLayout>
