DREM-30 ■チャンネルリスト一覧色値の調整
Change-Id: I32049d9db7b6b5c93544f053162c66fb7fc5c1ef

--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -60,5 +60,5 @@
     <drawable name="color_little_gray">#E5E5E5</drawable>
 
     <!--//チャンネルリスト-->
-    <color name="list_view_divider">#e0777777</color>
+    <color name="list_view_divider">#222222</color>
 </resources>
