--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/remote_control_main_layout.xml
@@ -124,7 +124,7 @@
                 </FrameLayout>
             </LinearLayout>
             <android.support.v4.view.ViewPager
-                android:id="@+id/remokon_viewpager"
+                android:id="@+id/remocon_viewpager"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:visibility="visible"
