マッジのバッグの修正
Change-Id: I2020c46e3019c25e52da9bd4719cba6fec48a000

--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/contents_detail_header_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/contents_detail_header_layout.xml
@@ -46,7 +46,8 @@
             android:clickable="true"
             android:contentDescription="@null"
             android:scaleType="fitCenter"
-            android:src="@mipmap/ic_personal_video_white_24dp" />
+            android:src="@mipmap/ic_personal_video_white_24dp"
+            android:visibility="gone"/>
 
         <ImageView
             android:layout_width="wrap_content"
