DREM-937 [実装]([DREM-51]設定TOP画面) UI実装
ステータスバーの修正、リストの表示、タッチ判定の付与

Change-Id: Iacb999b278f635e50875a720ad722422742416a0

--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -61,4 +61,9 @@
 
     <!--//チャンネルリスト-->
     <color name="list_view_divider">#222222</color>
+
+    <!--//設定画面-->
+    <color name="setting_text_color_white">#ffffff</color>
+    <color name="setting_category_color_white">#cccccc</color>
+
 </resources>
