--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_layout.xml
@@ -4,46 +4,12 @@
     android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical">
-
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/layout_titleBar"
+    <ListView
+        android:id="@+id/main_setting_list"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#ff0000">
-
-        <TextView
-            android:id="@+id/text_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal|center"
-            android:maxLines="1"
-            android:text="設定"
-            android:textColor="#ffffffff"
-            android:textSize="20dp" />
-
-    </RelativeLayout>
-
-    <Button
-        android:id="@+id/Back1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="戻る"
-        android:textColor="#ffffffff"/>
-
-    <TextView
-        android:id="@+id/tv_setting"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:text="設定画面へ"
-        android:textColor="#ffffffff"/>
-
-    <Button
-        android:id="@+id/setting_activity_btn_to_stb_select"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="再ペアリング"
-        android:textColor="#ffffffff"/>
-
-
+        android:layout_height="match_parent"
+        android:divider="@color/white_text"
+        android:dividerHeight="1dp"
+        android:background="@drawable/color_black">
+    </ListView>
 </LinearLayout>
