--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_base.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/activity_base.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:visibility="gone">
+        android:visibility="invisible">
 
         <include
             android:id="@+id/base_remote_controller"
