--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_list_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_list_layout.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="@dimen/main_setting_text_start_margin"
         android:textColor="@color/white_text"/>
     <ImageView
         android:id="@+id/setting_forward_image"
@@ -22,7 +22,7 @@
         android:layout_height="20dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="@dimen/main_setting_view_margin"
         android:src="@drawable/menu_forward"/>
     <TextView
         android:id="@+id/setting_state_text"
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_toStartOf="@id/setting_forward_image"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="@dimen/main_setting_text_end_margin"
         android:textAlignment="textEnd"
         android:textSize="14sp"
         android:textColor="@color/white_text"/>
