--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -65,5 +65,6 @@
     <!--//設定画面-->
     <color name="setting_text_color_white">#ffffff</color>
     <color name="setting_category_color_white">#cccccc</color>
-
+    <color name="setting_background_color_black">#000000</color>
+    <color name="setting_background_color_white">#ffffff</color>
 </resources>
