[DREM-2-2]グローバルメニュー最新仕様反映)調査・実装
契約・ペアリング済みメニュー全項目実装

Change-Id: I1d641b7473b012e461507281cc3707661bdf5c67

--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -17,6 +17,12 @@
     <color name="thumbnail_background">#888888</color>
     <color name="content_time_text">#AAAAAA</color>
     <color name="result_line">#222222</color>
+    <!--Global Menu-->
+    <color name="hikari_tv_title">#00FFFF</color>
+    <color name="dtv_channel_title">#00FFFF</color>
+    <color name="dtv_title">#FF0000</color>
+    <color name="d_animation_title">#FF8800</color>
+    <color name="stb_start_title">#888888</color>
     <!-- キーワード検索 -->
     <color name="keyword_search_background">#EEEEEE</color>
     <color name="keyword_search_hint">#888888</color>
