--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/nav_item_lv_menu_program.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/nav_item_lv_menu_program.xml
@@ -1,39 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-	<RelativeLayout
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:layout_marginBottom="15dp"
-		android:layout_marginTop="15dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/global_menu_list_item_bottom_margin"
+        android:layout_marginTop="@dimen/global_menu_list_item_top_margin">
 
-		<TextView
-		android:id="@+id/tv_title"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_centerVertical="true"
-		android:layout_marginLeft="20dp"
-		android:text="komito"
-		android:textColor="@color/menuListProgramTitle" />
+        <ImageView
+            android:id="@+id/dazn_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="@dimen/global_menu_list_item_sub_title_left_margin"
+            android:background="@mipmap/ic_stb_status_icon_white" />
 
-		<ImageView
-			android:id="@+id/iv_arrow"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_alignParentRight="true"
-			android:layout_centerVertical="true"
-			android:layout_marginRight="20dp"
-			android:background="@drawable/menu_forward"/>
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@+id/dazn_icon"
+            android:textColor="@color/menuListProgramTitle" />
 
-		<TextView
-			android:id="@+id/tv_count"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_centerVertical="true"
-			android:layout_marginRight="25dp"
-			android:textColor="@color/menuListProgramTitle"
-			android:layout_toLeftOf="@id/iv_arrow"/>
-	</RelativeLayout>
+        <ImageView
+            android:id="@+id/iv_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/global_menu_list_item_arrow_right_margin" />
+
+        <TextView
+            android:id="@+id/tv_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/global_menu_list_item_count_right_margin"
+            android:textColor="@color/menuListProgramTitle"
+            android:layout_toLeftOf="@id/iv_arrow" />
+    </RelativeLayout>
 </RelativeLayout>
