[DREM-2-2]グローバルメニュー最新仕様反映)調査・実装
契約・ペアリング済みメニュー以外の実装と、重複する処理をまとめた

Change-Id: I0cabd76bbee206c0495e61063fb621ba6be24d2f

--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -18,8 +18,7 @@
     <color name="content_time_text">#AAAAAA</color>
     <color name="result_line">#222222</color>
     <!--Global Menu-->
-    <color name="hikari_tv_title">#00FFFF</color>
-    <color name="dtv_channel_title">#00FFFF</color>
+    <color name="hikari_tv_and_dtv_channel_title">#00FFFF</color>
     <color name="dtv_title">#FF0000</color>
     <color name="d_animation_title">#FF8800</color>
     <color name="stb_start_title">#888888</color>
