DREM-937[実装] ([DREM-51]設定TOP画面) 実装　RuntimePermission不許可時のダイアログが絡むとチェックボックスが二重に表示されるケースが存在したため修正
Dアカウント存在判定処理を共通化
EXTERNAL_STORAGEに対するRuntimePermission対応、および任意のRuntimePermissionの確認処理を共通化
Android4.4環境にてCheckBoxの色が変化していなかったため、画像を使う表示方法に変更
設定画面の">"の画像を大きいものに差し替え

Change-Id: I9f2cdfc9a9fb6ad302e761ae34670f7f65705ac3

--- a/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_list_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/other/layout/setting_main_list_layout.xml
@@ -18,12 +18,12 @@
         android:textColor="@color/white_text"/>
     <ImageView
         android:id="@+id/setting_forward_image"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="@dimen/main_setting_view_margin"
-        android:src="@drawable/menu_forward"/>
+        android:src="@drawable/arrow_right"/>
     <TextView
         android:id="@+id/setting_state_text"
         android:layout_width="wrap_content"
