DREM-1081 [実装]([DREM-24-1]録画予約一覧(受付済み予約のテキスト表示領域拡張))実装 <対応内容> デザイン仕様書<録画予約画面>対応 詳細をJIRAに記載しました。 <担当者> 日野
Change-Id: I540b20b361dfa6a74059127ee717ba1e86774078

--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -15,8 +15,8 @@
     <color name="disable_tab_background">#111111</color>
     <color name="list_item_background">#000000</color>
     <color name="thumbnail_background">#888888</color>
-    <color name="content_time_text">#AAAAAA</color>
-    <color name="result_line">#222222</color>
+    <color name="content_time_text">#cccccc</color>
+    <color name="result_line">#333333</color>
     <!--Global Menu-->
     <color name="hikari_tv_and_dtv_channel_title">#00FFFF</color>
     <color name="dtv_title">#FF0000</color>
