--- a/dTVTerminalApp/app/src/main/res/layout/home/layout/record_reservation_list_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/home/layout/record_reservation_list_main_layout.xml
@@ -6,6 +6,8 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/contents_detail_16dp"
+        android:layout_marginEnd="@dimen/contents_detail_16dp"
         android:orientation="horizontal">
         <TextView
             android:id="@+id/record_reservation_list_update_time"
@@ -13,8 +15,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:gravity="right"
-            android:textColor="#FFFFFF"
-            android:text="8/31(木) 21:00 現在"/>
+            android:textSize="@dimen/list_item_time_text_size"
+            android:textColor="@color/content_time_text"/>
     </RelativeLayout>
     <View
         android:id="@+id/record_reservation_list_border"
@@ -22,14 +24,12 @@
         android:layout_height="1dp"
         android:layout_marginTop="5dp"
         android:layout_below="@id/record_reservation_list_update_time"
-        android:background="#FFFFFF"/>
+        android:background="@color/result_line"/>
     <ListView
         android:id="@+id/record_reservation_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/record_reservation_list_border"
-        android:divider="@drawable/list_item_divider"
-        android:dividerHeight="1dp">
+        android:layout_below="@id/record_reservation_list_border">
     </ListView>
 
 </LinearLayout>
