DREM-350  コンテンツ詳細(他サービス、他サービススマホ専用アプリ起動導線)【dTV】
                       コンテンツ詳細画面からDTVアプリの起動の実装 　部分修正

Change-Id: I3c0dc18978c10b94b3148ae5ade01601a2624b09

--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_main_layout.xml
@@ -91,6 +91,8 @@
                         android:layout_height="match_parent"
                         android:gravity="center"
                         android:textColor="@color/white_text"
+                        android:maxLines="1"
+                        android:textSize="@dimen/contents_detail_10dp"
                         android:visibility="gone" />
                 </LinearLayout>
             </RelativeLayout>
