--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -70,6 +70,7 @@
     <dimen name="contents_detail_8dp">8dp</dimen>
     <dimen name="contents_detail_10dp">10dp</dimen>
     <dimen name="contents_detail_16dp">16dp</dimen>
+    <dimen name="contents_detail_icon_size">36dp</dimen>
 
     <!--ビデオ一覧-->
     <dimen name="video_contents_genre_button_margin_end">15dp</dimen>
