--- a/dTVTerminalApp/app/src/main/res/layout/launch/layout/channel_list_item.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/launch/layout/channel_list_item.xml
@@ -4,7 +4,8 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@android:color/background_dark">
 
 	<LinearLayout
 		android:id="@+id/channel_list_item_thumb_ll"
