[実装]([DREM-10-6]コンテンツ詳細画面(録画予約))[DREM-10-6]コンテンツ詳細画面(録画予約) 実装(UI、ダイアログ)
実装完了
・UI実装
・ダイアログ実装
・UIロジック（Fragmentとのデータ連携）
未実装
・録画予約完了or失敗時ダイアログ表示
見送り
・ダイアログレイアウト

Change-Id: I7f9c86bb599b981cbc5f03f463fac35bcff2c975

--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -128,4 +128,8 @@
     <dimen name="main_setting_list_height">60dp</dimen>
     <dimen name="main_setting_checkbox_margin">10dp</dimen>
     <dimen name="main_setting_quality_list_separate">1dp</dimen>
+
+    <!-- リモート録画予約ダイアログ -->
+    <dimen name="recording_reservation_dialog_title_text_size">16dp</dimen>
+    <dimen name="recording_reservation_dialog_item_text_size">16dp</dimen>
 </resources>
