--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -72,4 +72,8 @@
     <color name="setting_category_color_white">#cccccc</color>
     <color name="setting_background_color_black">#000000</color>
     <color name="setting_background_color_white">#ffffff</color>
+
+    <!-- リモート録画予約ダイアログ -->
+    <color name="recording_reservation_item_text_color">#0076ff</color>
+    <color name="recording_reservation_title_text_color">#030303</color>
 </resources>
