[DREM-21]クリップ登録・解除処理
クリップの削除処理とトースト表示処理を実装

Change-Id: Ifc2ad4558267a414bad19775f12f1bbe8db57519

--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="thumbnail_background">#888888</color>
     <color name="content_time_text">#cccccc</color>
     <color name="result_line">#333333</color>
+    <color name="custom_toast_background">#000000</color>
     <!--Global Menu-->
     <color name="hikari_tv_and_dtv_channel_title">#00FFFF</color>
     <color name="dtv_title">#FF0000</color>
