--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -19,6 +19,7 @@
     <dimen name="launch_text_right_padding">10dp</dimen>
     <dimen name="launch_text_end_padding">0dp</dimen>
     <dimen name="launch_device_list_layout_high">0dp</dimen>
+    <dimen name="clip_toast_margin">10dp</dimen>
 
     <!--Global Menu-->
     <dimen name="global_menu_list_item_bottom_margin">15dp</dimen>
