DREM-47クリップ登録・解除処理
各画面にクリップ処理(ランキング以外はダミー)を追加

Change-Id: I263e3bde31bcde6d778fb1d7762dd5d464f2d563

--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
@@ -105,11 +105,13 @@
                     android:textColor="@android:color/white" />
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:id="@+id/contents_detail_clip_button"
+                    android:layout_width="@dimen/contents_detail_clip_size"
+                    android:layout_height="@dimen/contents_detail_clip_size"
                     android:layout_alignParentEnd="true"
+                    android:clickable="true"
                     android:gravity="center_vertical"
-                    android:src="@mipmap/ic_radio_button_checked_white_24dp" />
+                    android:src="@mipmap/icon_circle_opacity_clip" />
             </RelativeLayout>
         </LinearLayout>
 
