共通ダイアログのUI修正、および使用箇所での使用方法修正
Change-Id: Iea6faa724428c36d5f412ec60a72551ad7d83a59

--- a/dTVTerminalApp/app/src/main/res/drawable/rectangele_white.xml
+++ b/dTVTerminalApp/app/src/main/res/drawable/rectangele_white.xml
@@ -6,12 +6,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
         <shape>
-            <solid android:color="#555555" />
+            <solid android:color="@color/custom_dialog_separate_color" />
         </shape>
     </item>
     <item android:bottom="1.5dp">
         <shape>
-            <solid android:color="#FFFFFF" />
+            <solid android:color="@color/custom_dialog_backgroud_color" />
         </shape>
     </item>
  </layer-list>
