--- a/dTVTerminalApp/app/src/main/res/values/colors.xml
+++ b/dTVTerminalApp/app/src/main/res/values/colors.xml
@@ -50,6 +50,11 @@
     <color name="video_list_text">#FFFFFF</color>
     <color name="video_list_line">#424242</color>
 
+    <!--CustomDialog-->
+    <color name="custom_dialog_backgroud_color">#eeeeee</color>
+    <color name="custom_dialog_separate_color">#555555</color>
+    <color name="custom_dialog_button_text_color">#339999</color>
+
     <!--コンテンツ詳細-->
     <color name="contents_header_background">#000000</color>
     <!--録画番組一覧-->
