--- a/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
+++ b/dTVTerminalApp/app/src/main/res/layout/player/layout/dtv_contents_detail_fragment.xml
@@ -106,8 +106,8 @@
 
                 <ImageView
                     android:id="@+id/contents_detail_clip_button"
-                    android:layout_width="@dimen/contents_detail_clip_size"
-                    android:layout_height="@dimen/contents_detail_clip_size"
+                    android:layout_width="@dimen/clip_button_size"
+                    android:layout_height="@dimen/clip_button_size"
                     android:layout_alignParentEnd="true"
                     android:clickable="true"
                     android:gravity="center_vertical"
