--- a/dTVTerminalApp/app/src/main/res/values/dimens.xml
+++ b/dTVTerminalApp/app/src/main/res/values/dimens.xml
@@ -20,6 +20,8 @@
     <dimen name="launch_text_end_padding">0dp</dimen>
     <dimen name="launch_device_list_layout_high">0dp</dimen>
     <dimen name="clip_toast_margin">10dp</dimen>
+    <dimen name="clip_button_size">24dp</dimen>
+    <dimen name="clip_common_margin">15dp</dimen>
 
     <!--Global Menu-->
     <dimen name="global_menu_list_item_bottom_margin">15dp</dimen>
@@ -75,7 +77,6 @@
     <dimen name="contents_detail_8dp">8dp</dimen>
     <dimen name="contents_detail_10dp">10dp</dimen>
     <dimen name="contents_detail_16dp">16dp</dimen>
-    <dimen name="contents_detail_clip_size">24dp</dimen>
 
     <!--ビデオ一覧-->
     <dimen name="video_contents_genre_button_margin_end">15dp</dimen>
